# fedstarl

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/configs/: config.yaml
benchmarks/configs/aggregation_algorithm/: fedavg.yaml  fedprox.yaml
benchmarks/configs/callbacks/central_evaluation/: default.yaml
benchmarks/configs/callbacks/lr_scheduler/: reduceLROnPlateau.yaml
benchmarks/configs/experiment/myway/: 00_default.yaml
benchmarks/configs/logger/: wandb.yaml
benchmarks/configs/loss/: bce.yaml  ce.yaml
benchmarks/configs/model/: gru.yaml  gru_small.yaml  lstm.yaml  lstm_small.yaml  rnn.yaml  rnn_small.yaml
benchmarks/configs/optimizer/: default.yaml
benchmarks/configs/privacy/: default.yaml  gm.yaml
benchmarks/configs/training/: cross_device_10.yaml  cross_device_100.yaml  cross_device_40.yaml  cross_silo.yaml  default.yaml
benchmarks/datasets/: argument_parsing.py
benchmarks/datasets/cifar10/: download_preprocess.py
benchmarks/image_classifications/: train.py
benchmarks/image_classifications/configs/: cifar10.yaml
benchmarks/utils/aggregation_algorithm/: __init__.py
benchmarks/utils/datasets/: cifar10.py  initializer.py
benchmarks/utils/models/: __init__.py
benchmarks/utils/privacy/: __init__.py
src/data/: base.py
src/datasets/: __init__.py  base_pfl_central.py  base_pfl_federated.py
src/models/: __init__.py  cnn.py  dnn.py  gru.py  lstm.py  output_heads.py  rnn.py
src/nn/: __init__.py  functional.py  module.py  rnn.py  transformer.py
src/pfl/: data_class.py  metrics.py
src/pfl/aggregate/: simulate.py
src/pfl/algorithm/: __init__.py  algorithm_utils.py  base.py  federated_averaging.py  fedprox.py  scaffold.py
src/pfl/callbacks/: base.py  logger.py
src/pfl/data/: user_state.py
src/pfl/internal/bridge/: __init__.py  factory.py
src/pfl/internal/bridge/pytorch/: __init__.py  proximal.py  sgd.py
src/pfl/internal/ops/: pytorch_ops.py
src/pfl/privacy/: ftrl_mechansim.py
src/utils/: __init__.py  parameters.py
src/utils/data/: myway.py  utils.py
src/utils/datasets/: __init__.py  collate_fn.py  data_object.py  myway.py  parameters.py
src/utils/models/: metrics.py
src/utils/training/: utils.py
test/models/: create_sample_tensor.py  gru.py  lstm.py  rnn.py  sample_batch.pt
